qtsvg-opensource-src (5.4.1-1) UNRELEASED; urgency=medium

  [ Timo Jyrinki ]
  * New upstream release.
  * Bump Qt build-dependencies to 5.4.1.
  * Update watch file to qt.io
  * Mark symbols missing with GCC 5 as optional (Closes: #778094).

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 04 Mar 2015 07:49:07 +0000

qtsvg-opensource-src (5.4.0-1) experimental; urgency=medium

  [ Dmitry Shachnev ]
  * New upstream release.
  * Bump Qt build-dependencies to 5.4.0.
  * Build-depend on qtbase5-doc-html, for linking docs.
  * Update debian/copyright.
  * Bump Standards-Version to 3.9.6, no changes needed.
  * Update Vcs-Browser field to use cgit interface.
  * Update ABI version (qtsvg-abi-5-4-0).
  * Re-enable running tests during build.
  * Add myself to Uploaders.

  [ Timo Jyrinki ]
  * Update libqt5svg5.symbols.

 -- Dmitry Shachnev <mitya57@debian.org>  Fri, 26 Dec 2014 13:41:30 +0300

qtsvg-opensource-src (5.3.2-2) unstable; urgency=medium

  * Upload to unstable.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Tue, 23 Sep 2014 00:12:47 -0300

qtsvg-opensource-src (5.3.2-1) experimental; urgency=medium

  [ Dmitry Shachnev ]
  * Set QT_QPA_PLATFORM=minimal when running tests, so that they
    can be run without Xvfb.

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * New upstream release.
  * Bump Qt build dependencies.
  * Update symbols files with buildd's logs.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Fri, 19 Sep 2014 00:17:23 -0300

qtsvg-opensource-src (5.3.1-1) unstable; urgency=medium

  * New upstream release.
  * Bump Qt build dependencies.
  * Disable test until we get the transition sorted. Yes, ugly hack.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Wed, 02 Jul 2014 17:29:48 -0300

qtsvg-opensource-src (5.3.0-2) unstable; urgency=medium

  * Upload to unstable.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Fri, 06 Jun 2014 16:06:44 -0300
